envoy-ratelimit.yaml
static_resources:
  listeners:
  - name: "ingress listener"
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9080
    access_log:
    - name: envoy.access_loggers.file
      typed_config:
        "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
        path: "/dev/stdout"
    filter_chains:
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: localserver
              rate_limits:
              - actions:
                - request_headers:
                    header_name: x-test-ratelimit
                    descriptor_key: x-test-ratelimit
          http_filters:
          - name: envoy.filters.http.ratelimit
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.rate_limit.v2.RateLimit
              domain: test-httpserver
              failure_mode_deny: true
              rate_limit_service:
                grpc_service:
                  timeout: 30s 
                  google_grpc:
                    target_uri: "grpc://ratelimitsvc:8081"
                    stat_prefix: ratelimit_service
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: localserver
    connect_timeout: 60.0s 
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: localserver
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                protocol: tcp
                address: httpserver
                port_value: 9000

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
